fix(java): use Collectors.toList() instead of Stream.toList() (Java 11)
Stream.toList() is a Java 16+ API; this project targets Java 11
(maven.compiler.target). Compiled locally against JDK 26 without catching
it (no -release flag enforced), but failed real CI (Temurin 11) with
"cannot find symbol: method toList()" in both the java.yml build-test-java
job and the new contract job's Java step. Confirmed via CI logs from PR #38's
first push: every other step (Go/Node/Python contract tests, server build
and boot) was green on real GitHub Actions infrastructure -- this was the
only defect.

Signed-off-by: Andrei Beshkov <andrey.beshkov@gmail.com>